k8s/ui-auth/envoy/keycloak-auth.yaml
static_resources:
  listeners:
  - name: envoy_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 5050
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          http_filters:
          - name: envoy.filters.http.oauth2
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.oauth2.v3.OAuth2
              config:
                token_endpoint:
                  cluster: keycloak
                  uri: http://keycloak:8080/realms/NanosApps/protocol/openid-connect/token
                  timeout: 3s
                authorization_endpoint: http://localhost:8080/realms/NanosApps/protocol/openid-connect/auth
                redirect_uri: "%REQ(x-forwarded-proto)%://%REQ(:authority)%/callback"
                auth_scopes:
                - openid
                redirect_path_matcher:
                  path:
                    exact: /callback
                signout_path:
                  path:
                    exact: /signout
                pass_through_matcher:
                  name: public
                  prefix_match: /public/
                credentials:
                  client_id: uiservice
                  token_secret:
                    name: token
                  hmac_secret:
                    name: hmac
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          stat_prefix: http_traffic
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: ui-service
                  timeout: 1s
  clusters:
  - name: ui-service
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: ui-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: ui-service
                port_value: 5000

  - name: keycloak
    connect_timeout: 0.25s
    type: LOGICAL_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: keycloak
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: keycloak
                port_value: 8080

  secrets:
  - name: token
    generic_secret:
      secret:
        inline_string: "rfZrJMI5pbI2RA2LJG9aDYhe1On99rOL"
  - name: hmac
    generic_secret:
      secret:
        inline_string: "secret"
